<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShoppingListProductAddition">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/labelActivitylogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:layout_width="110dp"
                android:layout_height="50dp"
                android:layout_marginVertical="6dp"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/fooding_logo_blu"
                android:contentDescription="@string/fooding_logo_alt" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/productNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/fooding_color"
        app:cardCornerRadius="20dp"
        app:layout_constraintStart_toStartOf="@id/productNameInputCard"
        app:layout_constraintTop_toBottomOf="@id/labelActivitylogo">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:paddingHorizontal="12dp"
            android:paddingVertical="2dp"
            android:text="@string/nome_productAddition"
            android:textColor="@color/white" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/productNameInputCard"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="100dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/productNameLabel">

        <AutoCompleteTextView
            android:id="@+id/productNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:paddingVertical="10dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/product_name_hint_shopping_list"
            android:inputType="textPersonName"
            android:textColor="@color/product_marca"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/marcaLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/fooding_color"
        app:cardCornerRadius="20dp"
        app:layout_constraintStart_toStartOf="@id/productNameInputCard"
        app:layout_constraintTop_toBottomOf="@id/productNameInputCard">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:paddingHorizontal="12dp"
            android:paddingVertical="2dp"
            android:text="@string/product_marca_label_shopping_list"
            android:textColor="@color/white" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/marcaInputCard"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="100dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/marcaLabel">

        <androidx.cardview.widget.CardView
            android:id="@+id/marcaInputContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/marcaInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="16dp"
                android:background="@null"
                android:ems="10"
                android:fontFamily="@font/poppins"
                android:hint="@string/product_marca_hint_shopping_list"
                android:paddingVertical="10dp"
                android:textColor="@color/product_marca"
                android:translationY="2dp" />

        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/formatoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/fooding_color"
        app:cardCornerRadius="20dp"
        app:layout_constraintStart_toStartOf="@id/marcaInputCard"
        app:layout_constraintTop_toBottomOf="@id/marcaInputCard">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:paddingHorizontal="12dp"
            android:paddingVertical="2dp"
            android:text="@string/product_formato_label_shopping_list"
            android:textColor="@color/white" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/formatoInputCard"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="100dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/formatoLabel">

        <androidx.cardview.widget.CardView
            android:id="@+id/formatoInputContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/formatoInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="16dp"
                android:paddingVertical="10dp"
                android:background="@null"
                android:ems="10"
                android:fontFamily="@font/poppins"
                android:hint="@string/product_formato_hint_shopping_list"
                android:textColor="@color/product_marca"
                android:translationY="2dp" />

        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/productStockLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/fooding_color"
        app:cardCornerRadius="20dp"
        app:layout_constraintStart_toStartOf="@id/productNameInputCard"
        app:layout_constraintTop_toBottomOf="@id/formatoInputCard">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:paddingHorizontal="12dp"
            android:paddingVertical="2dp"
            android:text="@string/quantità_productAddition"
            android:textColor="@color/white" />
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/productStockInputCard"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="100dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/productStockLabel">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <Button
                    android:id="@+id/decreaseStockButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:backgroundTint="@color/fooding_color"
                    android:fontFamily="@font/poppins_semibold"
                    android:textColor="@color/button_color_selector"
                    android:text="-"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/productStockInput"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/productStockInput"
                    android:layout_width="214dp"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:textAlignment="center"
                    android:layout_marginHorizontal="10dp"
                    android:ems="10"
                    android:fontFamily="@font/poppins"
                    android:text="@string/quantità_hint_productAddition"
                    android:hint="@string/quantità_hint_productAddition"
                    android:inputType="number"
                    android:paddingVertical="8dp"
                    android:textColor="@color/product_marca"
                    android:translationY="2dp"
                    app:layout_constraintStart_toEndOf="@id/decreaseStockButton"
                    app:layout_constraintEnd_toStartOf="@id/increaseStockButton"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/increaseStockButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:backgroundTint="@color/fooding_color"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="+"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/productStockInput"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/productAddictionCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/fooding_color"
        android:fontFamily="@font/poppins"
        android:text="@string/annulla_button_text"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:paddingHorizontal="16dp"
        android:paddingVertical="6dp"
        app:layout_constraintEnd_toStartOf="@id/productAdditionConfirm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/productStockInputCard" />

    <Button
        android:id="@+id/productAdditionConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/fooding_color"
        android:paddingHorizontal="16dp"
        android:paddingVertical="6dp"
        android:textAllCaps="false"
        android:text="@string/aggiugi_button_text"
        android:textSize="16sp"
        android:textColor="@color/button_color_selector"
        android:fontFamily="@font/poppins"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/productAddictionCancel"
        app:layout_constraintTop_toTopOf="@id/productAddictionCancel" />

</androidx.constraintlayout.widget.ConstraintLayout>