<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/productCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="24dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="24dp"
    android:layout_marginBottom="10dp"
    app:cardCornerRadius="14dp"
    app:cardElevation="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/ricettaImageCard"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="20dp"
            app:cardCornerRadius="14dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/ricettaImage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/product_image_alt"
                    tools:src="@drawable/risotto"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/ricettaName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="-6dp"
            android:layout_toEndOf="@id/ricettaImageCard"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/product_name"
            android:textSize="20sp"
            tools:text="Tagliatelle al ragù" />

        <TextView
            android:id="@+id/ricettaAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ricettaName"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@id/ricettaImageCard"
            android:fontFamily="@font/poppins"
            android:textColor="@color/product_marca"
            android:textSize="14sp"
            tools:text="By GialloZafferano" />

        <ImageView
            android:id="@+id/ricettaDifficoltaImage"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_below="@id/ricettaAuthor"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_toEndOf="@id/ricettaImageCard"
            android:contentDescription="@string/product_weight_icon_alt"
            android:src="@drawable/chef_icon"
            app:tint="@color/product_name" />

        <TextView
            android:id="@+id/ricettaDifficolta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ricettaAuthor"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@id/ricettaDifficoltaImage"
            android:fontFamily="@font/poppins"
            android:textSize="12sp"
            tools:text="facile" />

        <ImageView
            android:id="@+id/ricettaDurataImage"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_below="@id/ricettaAuthor"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_toEndOf="@id/ricettaDifficolta"
            android:contentDescription="@string/stock_icon_alt"
            android:src="@drawable/product_timer"
            app:tint="@color/product_name" />

        <TextView
            android:id="@+id/ricettaDurata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ricettaAuthor"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@id/ricettaDurataImage"
            android:fontFamily="@font/poppins"
            android:textSize="12sp"
            tools:text="11min." />

        <ImageView
            android:id="@+id/ricettaKcalImge"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_marginTop="3dp"
            android:layout_below="@id/ricettaAuthor"
            android:layout_marginEnd="2dp"
            android:layout_toEndOf="@id/ricettaDurata"
            android:contentDescription="@string/expiration_date_icon_alt"
            android:src="@drawable/bolt_icon"
            app:tint="@color/product_name" />

        <TextView
            android:id="@+id/ricettaKcal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ricettaAuthor"
            android:layout_toEndOf="@id/ricettaKcalImge"
            android:fontFamily="@font/poppins"
            android:textSize="12sp"
            tools:text="324Kcal" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>